--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
-*{
-    font-family:monospace;
+* {
+  font-family: monospace;
 }
-:root{
-    font-size: 16px;
+:root {
+  font-size: 16px;
 }
 img {
   height: auto;
@@ -18,6 +18,16 @@ img {
     "image intro-text"
     "image form-row"
     "image submit-row";
+
+  @media (max-width: 600px) {
+    grid-template-columns: 1fr;
+    grid-template-rows: 6rem 1fr 1fr 1fr;
+    grid-template-areas: 
+    "image"
+    "intro-text"
+    "form-row"
+    "submit-row";
+  }
 }
 
 .container div {
@@ -40,7 +50,7 @@ img {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  width: min(90%,600px);
+  width: min(90%, 600px);
   padding: 4em;
 }
 .form-row {
