Fixed links for css and img
Styling and pictures werent connected for github pages correctly

--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ img {
 
 .image-column {
   grid-area: image;
-  background-image: url(/east-side-nyc.jpg);
+  background-image: url(east-side-nyc.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
